[gd_scene load_steps=4 format=3 uid="uid://bh6wt44grcuvv"]

[ext_resource type="StyleBox" uid="uid://d3wgod6kjloxf" path="res://appFiles/uiGraphics/assignment_input.tres" id="1_2u263"]
[ext_resource type="Script" uid="uid://cuwn53o8llido" path="res://appFiles/Scripts/main_menu.gd" id="1_lqct3"]
[ext_resource type="Texture2D" uid="uid://mb8od7ssw00b" path="res://appFiles/uiGraphics/Lock Icon.png" id="3_pceq0"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqct3")
lock_icon = ExtResource("3_pceq0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 384
theme_override_constants/margin_top = 114
theme_override_constants/margin_right = 384
theme_override_constants/margin_bottom = 114

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_2u263")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
modulate = Color(0.25098, 0.25098, 0.25098, 1)
z_index = -1
custom_minimum_size = Vector2(0, 52.5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0

[node name="create_assignments" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Create"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
modulate = Color(0.25098, 0.25098, 0.25098, 1)
z_index = -1
custom_minimum_size = Vector2(0, 52.5)
layout_mode = 2
size_flags_horizontal = 4

[node name="start_assignments" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Start"
icon_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
modulate = Color(0.25098, 0.25098, 0.25098, 1)
self_modulate = Color(0.25098, 0.25098, 0.25098, 1)
z_index = -1
custom_minimum_size = Vector2(0, 52.5)
layout_mode = 2
size_flags_horizontal = 4

[node name="start_game" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Game"
icon = ExtResource("3_pceq0")
icon_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
modulate = Color(0.25098, 0.25098, 0.25098, 1)
self_modulate = Color(0.25098, 0.25098, 0.25098, 1)
z_index = -1
custom_minimum_size = Vector2(0, 52.5)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/create_assignments" to="." method="_on_create_assignments_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/start_assignments" to="." method="_on_start_assignments_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
